# AiA-Fingerprinting

./: .gitignore  JVT - AIAi - Kunst Authenticatie.docx  JVT - AIAi - Kunst Authenticatie.md  pyproject.toml  requirements.txt
data/: README.md
docs/: maths-explainer.md
notebooks/: pictology_lam_pascal.py  pictology_rembrandt_test.py
outputs/pictology_rembrandt/: all_features.csv  color_analysis.csv  contour_interior_relationship.csv  contrast_analysis.csv  detail_density_analysis.csv  extract_brushstrokes.csv  hatching_analysis.csv  light_dark_spatial.csv  line_spontaneity_score.csv  major_minor_analysis.csv  pressure_variation.csv  rhythm_analysis.csv  sequence_of_development.csv  surface_organization.csv  texture_rendering.csv  timings.csv
research/: 01_fractal_dimension.ipynb  02_scattering_transform.ipynb  03_dtcwt_hmt.ipynb  04_lbp_hog.ipynb  05_brushstroke_geometry.ipynb  06_persistent_homology.ipynb  fast-ai-painter-classification.ipynb  utils.py
research/dstroke/: 01_dataset_synthesis.ipynb  02a_pix2pix_finetune.ipynb  02b_pix2pix_from_scratch.ipynb  02c_sam2_zero_shot.ipynb  02d_segformer_finetune.ipynb  03_strategy_comparison.ipynb  04_soft_segmentation.ipynb  05_ordering_and_coloring.ipynb  README.md  dstroke_utils.py  requirements-dstroke.txt
src/pictology/: README.md  __init__.py  brushstroke.py  characteristic_list.py  construction.py  contour_rhythm.py  pipeline.py  spontaneity.py  surface_color.py
